
[package]
name = "abc177"
version = "0.1.0"
authors = ["hkdnet <satoko.itse@gmail.com>"]
edition = "2018"

# dependencies added to new project
[dependencies]
comp = { git = "https://github.com/hkdnet/comp-rs" }

proconio = "*"
num-bigint = "0.2.6"
num-traits = "0.2.11"
num-integer = "0.1.42"

[profile.release]
lto = true
panic = 'abort'
